# pgconf-nyc-2024

./: .env  .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yaml
.devcontainer/: devcontainer.json
.devcontainer/local-features/compliance/: devcontainer-feature.json  install.sh
.devcontainer/local-features/pgenv/: devcontainer-feature.json  install.sh
.devcontainer/local-features/pgrx/: devcontainer-feature.json  install.sh
.devcontainer/local-features/profiling/: devcontainer-feature.json  install.sh
.devcontainer/local-features/protoc/: devcontainer-feature.json  install.sh
.devcontainer/local-features/rustup/: devcontainer-feature.json  install.sh
config/: otel-collector.yaml  prometheus.yaml
pgconf/: Cargo.toml  pgconf.control
pgconf/src/: lib.rs
vector-service-proto/: Cargo.toml  build.rs
vector-service-proto/proto/: vector.proto
vector-service-proto/src/: lib.rs
vector-service-server/: Cargo.toml  build.rs
vector-service-server/benches/: dot_product.rs
vector-service-server/src/: lib.rs  main.rs
