[package]
name = "vector-service-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
structured-logger = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0.12"
vector-service-proto = { path = "../vector-service-proto", version = "0.1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["stable"] }

[[bench]]
name = "dot_product"
harness = false
